--- a/index.html
+++ b/index.html
@@ -20,8 +20,183 @@
 </head>
 
 <body>
-    <header class="site-header"></header>
-    <main class="main-content">text</main>
+    <header class="site-header">
+        <div class="">
+            <div class="site-header-section container">
+                <a href="#" class="site-logo">
+                    <img src="./images/site-logo.svg" alt="Logo">
+                </a>
+                <ul class="site-nav">
+                    <li class="site-nav-item"><a href="#" class="site-nav-link">HOME</a></li>
+                    <li class="site-nav-item"><a href="#" class="site-nav-link">ABOUT US</a></li>
+                    <li class="site-nav-item"><a href="#" class="site-nav-link"> Create your plan</a></li>
+                </ul>
+
+            </div>
+            <div class="landing">
+                <div class="landing-texts container">
+                    <h2 class="landing-title">
+                        Good coffee <br> is made simply.
+                    </h2>
+                    <p class="landing-text">
+                        Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.
+                    </p>
+                    <a href="#" class="landing-link">Create your plan</a>
+                </div>
+                <div class="landing-images">
+                    <img class="main-land-img" src="./images/landing-coffee.png" width="710" height="696" alt="Coffee image">
+                    <img class="second-land-img" src="./images/main-log.svg" alt="Coffe image">
+                </div>
+            </div>
+        </div>
+    </header>
+    <main class="main-content">
+        <section class="collection-cofe">
+            <img src="./images/left-top.svg" alt="leaf" class="left-top">
+            <img src="./images/left-bottom.svg" alt="leaf" class="left-bottom">
+            <img src="./images/right.svg" alt="leaf" class="right">
+            <div class="container">
+                <h2 class="collection">
+                    our collection
+                </h2>
+                <div class="collection-1">
+                    <img src="./images/danche.png" alt="danche" width="450">
+                    <div class="collection-texts">
+                        <h4 class="collection-title">
+                            Danche
+                        </h4>
+                        <p class="collection-text">
+                            Ethiopian hand-harvested blend densely packed with vibrant fruit notes.
+                        </p>
+                    </div>
+                </div>
+                <div class="collection-2">
+
+                    <div class="collection-texts">
+                        <h4 class="collection-title">
+                            Gran Espresso
+                        </h4>
+                        <p class="collection-text">
+                            Light and flavorful blend with cocoa and black pepper for an intense experience.
+                        </p>
+                    </div>
+                    <img src="./images/espresso.png" alt="espresso">
+                </div>
+                <div class="collection-3">
+                    <img src="./images/priccollo.png" alt="priccollo">
+                    <div class="collection-texts">
+                        <h4 class="collection-title">
+                            Piccollo
+                        </h4>
+                        <p class="collection-text">
+                            Mild and smooth blend featuring notes of toasted almond and dried cherry.
+                        </p>
+                    </div>
+                </div>
+                <div class="collection-4">
+                    <div class="collection-texts">
+                        <h4 class="collection-title">
+                            Planalto
+                        </h4>
+                        <p class="collection-text">
+                            Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.
+                        </p>
+                    </div>
+                    <img src="./images/planalto.png" alt="planalto" width="450">
+                </div>
+            </div>
+        </section>
+        <section class="features">
+            <div class="container">
+                <h2 class="feature-title">
+                    Why choose us?
+                </h2>
+                <p class="feature-des">
+                    A large part of our role is choosing which particular coffees will be featured <br> in our range. This means working closely with the best coffee growers to give <br> you a more impactful experience on every level.
+                </p>
+                <ul class="feture-list">
+                    <li class="feature-item">
+                        <img src="./images/feature-1.png" alt="coffe">
+                        <h4 class="feature-item-title">
+                            Best quality
+                        </h4>
+                        <p class="feature-item-des">
+                            Discover an endless variety of the world’s best artisan coffee from each of our roasters.
+                        </p>
+                    </li>
+                    <li class="feature-item">
+                        <img src="./images/feature-2.png" alt="coffe">
+                        <h4 class="feature-item-title">
+                            Exclusive benefits
+                        </h4>
+                        <p class="feature-item-des">
+                            Special offers and swag when you subscribe, including 30% off your first shipment.
+                        </p>
+                    </li>
+                    <li class="feature-item">
+                        <img src="./images/feature-3.png" alt="coffe">
+                        <h4 class="feature-item-title">
+                            Free shipping
+                        </h4>
+                        <p class="feature-item-des">
+                            We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+
+        </section>
+        <section class="how">
+            <div class="container">
+                <h2 class="how-title">
+                    How it works
+                </h2>
+                <img src="./images/coffe-first.svg" alt="first coffee then others  " class="first-cofe">
+                <ul class="process">
+                    <li class="process-item">
+                        <div class="box"></div>
+                        <hr class="hr">
+                        <div class="proces-in">
+                            <p class="number">01</p>
+                            <h2 class="proces-title">
+                                Pick your coffee
+                            </h2>
+                            <p class="proces-des">
+                                Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="process-item">
+                        <div class="box"></div>
+                        <hr class="hr">
+                        <div class="proces-in">
+                            <p class="number">02</p>
+                            <h2 class="proces-title">
+                                Choose the frequency
+                            </h2>
+                            <p class="proces-des">
+                                Customize your order frequency, quantity, even your roast style and grind type. Pause, skip or cancel your subscription with no commitment through our online portal.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="process-item">
+                        <div class="box"></div>
+
+                        <div class="proces-in">
+                            <p class="number">03</p>
+                            <h2 class="proces-title">
+                                Receive and enjoy!
+                            </h2>
+                            <p class="proces-des">
+                                We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning world-class coffees curated to provide a distinct tasting experience.
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+                <a href="#" class="plan">Create your plan</a>
+            </div>
+        </section>
+    </main>
     <footer class="site-footer"></footer>
     <!-- JAVASCRIPT -->
     <script src="js/main.js"></script>
