--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     />
     <!-- CSS -->
     <link rel="stylesheet" href="css/normlaize.css" />
+    <link rel="stylesheet" href="./css/shared.css">
     <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -28,8 +29,8 @@
                 </a>
                 <ul class="site-nav">
                     <li class="site-nav-item"><a href="#" class="site-nav-link">HOME</a></li>
-                    <li class="site-nav-item"><a href="#" class="site-nav-link">ABOUT US</a></li>
-                    <li class="site-nav-item"><a href="#" class="site-nav-link"> Create your plan</a></li>
+                    <li class="site-nav-item"><a href="./about us/index.html" class="site-nav-link">ABOUT US</a></li>
+                    <li class="site-nav-item"><a href="./create plan/index.html" class="site-nav-link"> Create your plan</a></li>
                 </ul>
 
             </div>
@@ -115,7 +116,8 @@
                     A large part of our role is choosing which particular coffees will be featured <br> in our range. This means working closely with the best coffee growers to give <br> you a more impactful experience on every level.
                 </p>
                 <ul class="feture-list">
-                    <li class="feature-item">
+                    <li class="feature-item word-cofes">
+                        <img src="./images/word-cofe.svg" class="word-cofe" alt="">
                         <img src="./images/feature-1.png" alt="coffe">
                         <h4 class="feature-item-title">
                             Best quality
@@ -182,7 +184,7 @@
                     <li class="process-item">
                         <div class="box"></div>
 
-                        <div class="proces-in">
+                        <div class="proces-in" style="margin-top: -25px;">
                             <p class="number">03</p>
                             <h2 class="proces-title">
                                 Receive and enjoy!
@@ -197,7 +199,35 @@
             </div>
         </section>
     </main>
-    <footer class="site-footer"></footer>
+    <footer class="site-footer ">
+        <div class="footers container ">
+            <a href="#" class="site-footer-logo">
+                <img src="./images/site-logo.svg" alt="Logo">
+            </a>
+            <ul class="footer-lins-list">
+                <li class="footer-link-item"><a href="#" class="footer-links">HOME</a></li>
+                <li class="footer-link-item"><a href="#" class="footer-links">ABOUT US</a></li>
+                <li class="footer-link-item"><a href="#" class="footer-links">Create your plan</a></li>
+            </ul>
+            <ul class="footer-socials">
+                <li class="footer-socials-item">
+                    <a href="#" class="socials-link">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                </li>
+                <li class="footer-socials-item">
+                    <a href="#" class="socials-link">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </li>
+                <li class="footer-socials-item">
+                    <a href="#" class="socials-link">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
     <!-- JAVASCRIPT -->
     <script src="js/main.js"></script>
 </body>
