create plan and delivery ready

--- a/create plan/delivery/delivery.html
+++ b/create plan/delivery/delivery.html
@@ -15,9 +15,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
     <!-- CSS -->
-    <link rel="stylesheet" href="../css/normlaize.css" />
-    <link rel="stylesheet" href="../css/shared.css">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../../css/normlaize.css" />
+    <link rel="stylesheet" href="../../css/shared.css">
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="delivery.css">
 </head>
 
 <body>
@@ -25,11 +26,11 @@
         <div class="">
             <div class="site-header-section container">
                 <a href="#" class="site-logo">
-                    <img src="../images/site-logo.svg" alt="Logo">
+                    <img src="../../images/site-logo.svg" alt="Logo">
                 </a>
                 <ul class="site-nav">
-                    <li class="site-nav-item"><a href="../index.html" class="site-nav-link">HOME</a></li>
-                    <li class="site-nav-item"><a href="../about us/index.html" class="site-nav-link">ABOUT US</a></li>
+                    <li class="site-nav-item"><a href="../../index.html" class="site-nav-link">HOME</a></li>
+                    <li class="site-nav-item"><a href="../../about us/index.html" class="site-nav-link">ABOUT US</a></li>
                     <li class="site-nav-item"><a href="#" class="site-nav-link"> Create your plan</a></li>
                 </ul>
 
@@ -45,8 +46,8 @@
 
                 </div>
                 <div class="landing-images">
-                    <img class="main-land-img" src="../images/plan-landing.png" width="600" height="696" alt="Coffee image">
-                    <img class="second-land-img" src="../images/main-log.svg" alt="Coffe image">
+                    <img class="main-land-img" src="../../images/plan-landing.png" width="600" height="696" alt="Coffee image">
+                    <img class="second-land-img" src="../../images/main-log.svg" alt="Coffe image">
                 </div>
             </div>
         </div>
@@ -105,16 +106,17 @@
             </div>
         </section>
         <section class="preference">
-            <img src="../images/left-bottom.svg" alt="" class="left-bottom">
-            <img src="../images/right.svg" alt="" class="right">
+            <img src="../../images/left-bottom.svg" alt="" class="left-bottom">
+            <img src="../../images/Vector.png" alt="" class="bottom">
+            <img src="../../images/right.svg" alt="" class="right">
 
             <div class="container pref">
                 <ul class="pref-list">
-                    <li class="pref-item active">01 Preferences</li>
+                    <li class="pref-item ">01 Preferences</li>
                     <li class="pref-item">02 Bean Type</li>
                     <li class="pref-item">03 Quantity</li>
                     <li class="pref-item">04 Grind Option</li>
-                    <li class="pref-item"><a href="./delivery/delivery.html" class="pref-item-link">05 Deliveries</a></li>
+                    <li class="pref-item active">05 Deliveries</li>
                 </ul>
 
                 <div class="drink">
@@ -129,7 +131,7 @@
                             </h4>
                             <p class="drink-item-des">Compatible with Nespresso systems and similar brewers</p>
                         </li>
-                        <li class="drink-item">
+                        <li class="drink-item act">
                             <h4 class="drink-item-title">
                                 Filter
                             </h4>
@@ -150,14 +152,111 @@
                     <h3 class="questins">What type of coffee?
                         <i class="fas fa-chevron-down"></i>
                     </h3>
+                    <ul class="drink-list">
+                        <li class="drink-item">
+                            <h4 class="drink-item-title">
+
+                                Single Origin
+                            </h4>
+                            <p class="drink-item-des">Distinct, high quality coffee from a specific family-owned farm</p>
+                        </li>
+                        <li class="drink-item">
+                            <h4 class="drink-item-title">
+                                Decaf
+                            </h4>
+                            <p class="drink-item-des">
+                                Just like regular coffee, except the caffeine has been removed
+                            </p>
+                        </li>
+                        <li class="drink-item act">
+                            <h4 class="drink-item-title ">
+                                Blended
+                            </h4>
+                            <p class="drink-item-des">
+                                Combination of two or three dark roasted beans of organic coffees </p>
+                        </li>
+                    </ul>
                     <h3 class="questins">How much would you like? <i class="fas fa-chevron-down"></i> </h3>
-                    <h3 class="questins">Want us to grind them? <i class="fas fa-chevron-down"></i> </h3>
+                    <ul class="drink-list">
+                        <li class="drink-item act">
+                            <h4 class="drink-item-title">
+
+                                250g
+                            </h4>
+                            <p class="drink-item-des">Perfect for the solo drinker. Yields about 12 delicious cups.</p>
+                        </li>
+                        <li class="drink-item">
+                            <h4 class="drink-item-title">
+                                500g
+                            </h4>
+                            <p class="drink-item-des">
+                                Perfect option for a couple. Yields about 40 delectable cups.
+                            </p>
+                        </li>
+                        <li class="drink-item">
+                            <h4 class="drink-item-title">
+                                1000g
+                            </h4>
+                            <p class="drink-item-des">
+                                Perfect for offices and events. Yields about 90 delightful cups. </p>
+                        </li>
+                    </ul>
                     <h3 class="questins">How often should we deliver? <i class="fas fa-chevron-down"></i> </h3>
+                    <ul class="drink-list">
+                        <li class="drink-item">
+                            <h4 class="drink-item-title">
+
+                                Every week
+                            </h4>
+                            <p class="drink-item-des">$7.20 per shipment. Includes free first-class shipping.</p>
+                        </li>
+                        <li class="drink-item">
+                            <h4 class="drink-item-title">
+                                Every 2 weeks
+                            </h4>
+                            <p class="drink-item-des">
+                                $9.60 per shipment. Includes free priority shipping.
+                            </p>
+                        </li>
+                        <li class="drink-item act">
+                            <h4 class="drink-item-title">
+                                Every month
+                            </h4>
+                            <p class="drink-item-des">
+                                $12.00 per shipment. Includes free priority shipping. </p>
+                        </li>
+                    </ul>
+                    <h3 class="questins">Want us to grind them?<i class="fas fa-chevron-down"></i> </h3>
+                    <ul class="drink-list">
+                        <li class="drink-item">
+                            <h4 class="drink-item-title">
+
+                                Wholebean
+                            </h4>
+                            <p class="drink-item-des">Best choice if you cherish the full sensory experience</p>
+                        </li>
+                        <li class="drink-item act">
+                            <h4 class="drink-item-title">
+                                Filter
+                            </h4>
+                            <p class="drink-item-des">
+                                For drip or pour-over coffee methods such as V60 or Aeropress
+                            </p>
+                        </li>
+                        <li class="drink-item">
+                            <h4 class="drink-item-title">
+                                Cafetiére
+                            </h4>
+                            <p class="drink-item-des">
+                                Course ground beans specially suited for french press coffee
+                            </p>
+                        </li>
+                    </ul>
                     <div class="summary">
                         <h4 class="summary-title">
                             Order Summary
                         </h4>
-                        <p class="summary-text">“I drink my coffee using Capsules, with a <span>_____</span> type of bean. <span>_____</span> , sent to me <span>_____</span>.”</p>
+                        <p class="summary-text">“I drink my coffee as <span>Filter</span>, with a <span>Decaf</span> type of bean. <span>250g</span> ground ala <span>Cafetiére</span>, sent to me <span>Every Week</span>.” </p>
                     </div>
                     <div class="create-plan">
                         <a href="#" class="plan">Create me plan</a>
@@ -168,7 +267,7 @@
         <footer class="site-footer ">
             <div class="footers container ">
                 <a href="#" class="site-footer-logo">
-                    <img src="../images/site-logo.svg" alt="Logo">
+                    <img src="../../images/site-logo.svg" alt="Logo">
                 </a>
                 <ul class="footer-lins-list">
                     <li class="footer-link-item"><a href="#" class="footer-links">HOME</a></li>
