--- a/create plan/delivery/delivery.html
+++ b/create plan/delivery/delivery.html
@@ -102,7 +102,7 @@
                         </div>
                     </li>
                 </ul>
-                <a href="#" class="plan">Create your plan</a>
+
             </div>
         </section>
         <section class="preference">
@@ -259,7 +259,26 @@
                         <p class="summary-text">“I drink my coffee as <span>Filter</span>, with a <span>Decaf</span> type of bean. <span>250g</span> ground ala <span>Cafetiére</span>, sent to me <span>Every Week</span>.” </p>
                     </div>
                     <div class="create-plan">
-                        <a href="#" class="plan">Create me plan</a>
+                        <button class="plans">Create me plan</button>
+                    </div>
+                    <div class="brackdrop hidden"></div>
+                    <div class="modal hidden">
+                        <div class="modal-wrapper">
+
+                            <h3 class="modal-title">
+                                order Summary
+                            </h3>
+                            <p class="order-detail">
+                                “I drink my coffee as <span class="modal-span">Filter</span>, <br> with a <span class="modal-span">Decaf</span> <br> type of bean. <span class="modal-span">250g</span> ground ala <span class="modal-span">Cafetiére</span>,
+                                sent to me
+                                <span class="modal-span">Every Week</span>.”
+                            </p>
+                            <p class="order-text">Is this correct? You can proceed to checkout or go back <br> to plan selection if something <br> is off. Subscription discount codes can also be <br> redeemed at the checkout. </p>
+                            <div class="check">
+                                <span class="cost"> <sup>$</sup> 14.00 <sub>/ mo</sub></span>
+                                <a href="#" class="chechout">Checkout</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -293,6 +312,7 @@
                 </ul>
             </div>
         </footer>
+        <script src="app.js"></script>
     </body>
 
 </html>
