--- a/about us/index.html
+++ b/about us/index.html
@@ -28,9 +28,9 @@
                     <img src="../images/site-logo.svg" alt="Logo">
                 </a>
                 <ul class="site-nav">
-                    <li class="site-nav-item"><a href="#" class="site-nav-link">HOME</a></li>
-                    <li class="site-nav-item"><a href="#" class="site-nav-link">ABOUT US</a></li>
-                    <li class="site-nav-item"><a href="#" class="site-nav-link"> Create your plan</a></li>
+                    <li class="site-nav-item"><a href="../index.html" class="site-nav-link">HOME</a></li>
+                    <li class="site-nav-item"><a href="index.html" class="site-nav-link">ABOUT US</a></li>
+                    <li class="site-nav-item"><a href="../create plan/index.html" class="site-nav-link"> Create your plan</a></li>
                 </ul>
 
             </div>
@@ -137,9 +137,9 @@
                 <img src="../images/site-logo.svg" alt="Logo">
             </a>
             <ul class="footer-lins-list">
-                <li class="footer-link-item"><a href="#" class="footer-links">HOME</a></li>
-                <li class="footer-link-item"><a href="#" class="footer-links">ABOUT US</a></li>
-                <li class="footer-link-item"><a href="#" class="footer-links">Create your plan</a></li>
+                <li class="footer-link-item"><a href="../index.html" class="footer-links">HOME</a></li>
+                <li class="footer-link-item"><a href="index.html" class="footer-links">ABOUT US</a></li>
+                <li class="footer-link-item"><a href="../create plan/index.html" class="footer-links">Create your plan</a></li>
             </ul>
             <ul class="footer-socials">
                 <li class="footer-socials-item">
