--- a/create plan/delivery/delivery.html
+++ b/create plan/delivery/delivery.html
@@ -31,7 +31,7 @@
                 <ul class="site-nav">
                     <li class="site-nav-item"><a href="../../index.html" class="site-nav-link">HOME</a></li>
                     <li class="site-nav-item"><a href="../../about us/index.html" class="site-nav-link">ABOUT US</a></li>
-                    <li class="site-nav-item"><a href="#" class="site-nav-link"> Create your plan</a></li>
+                    <li class="site-nav-item"><a href="../index.html" class="site-nav-link"> Create your plan</a></li>
                 </ul>
 
             </div>
