--- a/create plan/index.html
+++ b/create plan/index.html
@@ -30,7 +30,7 @@
                 <ul class="site-nav">
                     <li class="site-nav-item"><a href="../index.html" class="site-nav-link">HOME</a></li>
                     <li class="site-nav-item"><a href="../about us/index.html" class="site-nav-link">ABOUT US</a></li>
-                    <li class="site-nav-item"><a href="#" class="site-nav-link"> Create your plan</a></li>
+                    <li class="site-nav-item"><a href="index.html" class="site-nav-link"> Create your plan</a></li>
                 </ul>
 
             </div>
@@ -171,9 +171,9 @@
                     <img src="../images/site-logo.svg" alt="Logo">
                 </a>
                 <ul class="footer-lins-list">
-                    <li class="footer-link-item"><a href="#" class="footer-links">HOME</a></li>
-                    <li class="footer-link-item"><a href="#" class="footer-links">ABOUT US</a></li>
-                    <li class="footer-link-item"><a href="#" class="footer-links">Create your plan</a></li>
+                    <li class="footer-link-item"><a href="../index.html" class="footer-links">HOME</a></li>
+                    <li class="footer-link-item"><a href="../about us/index.html" class="footer-links">ABOUT US</a></li>
+                    <li class="footer-link-item"><a href="index.html" class="footer-links">Create your plan</a></li>
                 </ul>
                 <ul class="footer-socials">
                     <li class="footer-socials-item">
