--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
                 <img src="./images/site-logo.svg" alt="Logo">
             </a>
             <ul class="footer-lins-list">
-                <li class="footer-link-item"><a href="#" class="footer-links">HOME</a></li>
-                <li class="footer-link-item"><a href="#" class="footer-links">ABOUT US</a></li>
-                <li class="footer-link-item"><a href="#" class="footer-links">Create your plan</a></li>
+                <li class="footer-link-item"><a href="index.html" class="footer-links">HOME</a></li>
+                <li class="footer-link-item"><a href="./about us/index.html" class="footer-links">ABOUT US</a></li>
+                <li class="footer-link-item"><a href="./create plan/index.html" class="footer-links">Create your plan</a></li>
             </ul>
             <ul class="footer-socials">
                 <li class="footer-socials-item">
